--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.6.2"
+    "nodemailer": "^6.6.2",
+    "nodemon": "^2.0.12"
   }
 }
