before monday review Co-authored-by: WayneBruton <WayneBruton@users.noreply.github.com>

--- a/server/.env
+++ b/server/.env
@@ -7,3 +7,9 @@ DBUSER=root
 DATABASE=eccentri_capeprojects
 DBPASSWORD=alasco12
 
+
+
+MAILUSER=wayne@eccentrictoad.com
+MAILHOST=depro8.fcomet.com
+MAILPASSWORD=12071994Wb!@
+
