--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "darkmode-js": "^1.5.7",
     "vue": "^2.6.11",
+    "vue-phone-number-input": "^1.1.10",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
